.k8s/apps/home-assistant.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2026.7.0
    helm.sh/chart: home-assistant-0.3.68
    kubenix/hash: d8adf3f47e3403f087d90faf893fb1ad8d04df40
  name: home-assistant
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
  serviceName: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/version: 2026.7.0
        helm.sh/chart: home-assistant-0.3.68
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: home-assistant-secret
          image: ghcr.io/home-assistant/home-assistant:2026.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          name: home-assistant
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext: {}
          volumeMounts:
            - mountPath: /config
              name: home-assistant
            - mountPath: /config/configuration.yaml
              name: home-assistant-config
              subPath: configuration.yaml
      securityContext: {}
      serviceAccountName: home-assistant
      volumes:
        - configMap:
            name: home-assistant-config
          name: home-assistant-config
  volumeClaimTemplates:
    - metadata:
        name: home-assistant
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: rook-ceph-block
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2026.7.0
    helm.sh/chart: home-assistant-0.3.68
    kubenix/hash: d8adf3f47e3403f087d90faf893fb1ad8d04df40
  name: home-assistant
  namespace: apps
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2026.7.0
    helm.sh/chart: home-assistant-0.3.68
    kubenix/hash: d8adf3f47e3403f087d90faf893fb1ad8d04df40
  name: home-assistant
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: home.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home.josevictor.me
      secretName: wildcard-tls
